fixed alignment issue on emoji

--- a/playbook/app/pb_kits/playbook/pb_icon_circle/_icon_circle.scss
+++ b/playbook/app/pb_kits/playbook/pb_icon_circle/_icon_circle.scss
@@ -21,6 +21,10 @@ $pb_icon_circle_sizes: (
   overflow: hidden;
   position: relative;
 
+  .icon_circle_emoji {
+    font-family: sans-serif;
+  }
+
   i,
   svg {
     &[class^=pb_icon_kit] {
